--- a/jquery.sitekit/sitekit.css
+++ b/jquery.sitekit/sitekit.css
@@ -51,8 +51,8 @@ a.hatebu-users{
 
 
 div.gsc-control-cse{
-	border:none!important;
-	background:transparent!important;
+	border:none;
+	background:transparent;
 	padding:0!important;
 }
 div.gsc-control-cse form.gsc-search-box,
@@ -63,11 +63,17 @@ div.gsc-control-cse td.gsc-input{
 	padding:0!important;
 	vertical-align:top!important;
 }
+div.gsc-control-cse td.gsc-input div.gsc-input-box{
+	border-color:#bbb!important;
+	border-radius: 4px 0 0 4px!important;
+}
 div.gsc-control-cse td.gsc-search-button{
 	vertical-align:top!important;
 }
 div.gsc-control-cse input.gsc-search-button{
 	margin:0!important;
+	border-color:#bbb;
+	border-radius: 0 4px 4px 0!important;
 }
 .hide-gcse-button div.gsc-control-cse input.gsc-search-button{
 	display:none;
